--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
-<html lang="Pt-br">
+<html lang="Pt-BR">
+
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Um bot para ajudar a moderar a comunidade">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>ROJT BOT - MODERE A SUA COMUNIDADE DO DISCORD</title>
     </head>
+        <header class="cabeçalho">
+            <img src="logo.svg" class="Cabeçalho-imagem">
+            <nav class="Cabeçalho-menu">
+            <a class="Cabeçalho-menu-item">Comunidade Ballerini</a>
+            <a class="Cabeçalho-menu-item">Tutorial</a>
+            <a class="Cabeçalho-menu-item">Open Source</a>
+            <a class="Cabeçalho-menu-item">Comandos</a>
+            </nav>
+            
+        </header>
+        <main>
+            <section class="conteudo">
+                <h1 class="conteudo-principal">Balle Bot</h1>
+                <h2 class="conteudo-principal">Deixe sua comunidade segura de um jeito fácil</h2>
+                <button class="botão">Me Adicione!</button>
+            </section>
+            <img src="Rectangle.svg" class="imagem-principal">
+            <section class="conteudo-secundario">
+                <h3>O que ela faz por você?</h3>
+                <div class="conteudo-secundario-principal">
+                    <p class="conteudo-secundario-paragrafo">Cria um sistema de verificação capcha para novos membros garantirem que não são robôs</p>
+                    <p class="conteudo-secundario-paragrafo">Possui um sistema de banimento automático para links suspeitos que forem enviados na comunidade</p>
+                    <p class="conteudo-secundario-paragrafo">Sistema de avisos e banimento manual, para pessoas administradoras utilizarem</p>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <img src="BALLERINI.svg" class="imagem-rodape">
+        </footer>
     <body>
         
     </body>
