--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Um bot que irá moderar e deixar a sua comunidade segura de um jeito fácil!">
         <title>Balle Bot - Modere a sua comunidade do Discord</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     </head>
     <body>
         <header class="cabecalho">
-            <img class="cabecalho-imagem" src="logo.svg" alt="Logo da comunidade Ballerini">
+            <img class="cabecalho-imagem" src="./assets/img/logo.svg" alt="Logo da comunidade Ballerini">
             <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="">Comunidade Ballerini</a>
             <a class="cabecalho-menu-item" href="">Tutorial</a>
@@ -26,7 +26,7 @@
                 <h2 class="conteudo-principal-escrito-subtitulo">Deixe a sua comunidade segura de um jeito fácil</h2>
                 <button class="conteudo-principal-escrito-botao">Me adicione!</button>
             </div>
-            <img class="conteudo-principal-imagem"src="rectangle.svg" alt="Imagem da Balle Bot">
+            <img class="conteudo-principal-imagem" src="./assets/img/Rectangle.svg" alt="Imagem da Balle Bot">
             </section>
 
             <section class="conteudo-secundario">
@@ -38,7 +38,7 @@
         </main>
     
         <footer class="rodape">
-            <img class="rodape-imagem" src="ballerini.svg">
+            <img class="rodape-imagem" src="./assets/img/BALLERINI.svg">
         </footer>
     </body>
 </html>
